RESOLVED FIXED 48837
REGRESSION (r71097): Many http tests failing on Windows
https://bugs.webkit.org/show_bug.cgi?id=48837
Summary REGRESSION (r71097): Many http tests failing on Windows
Adam Roben (:aroben)
Reported 2010-11-02 08:23:07 PDT
r71097 [1] changed DRT to record resource identifiers even when dumpResourceLoadCallbacks is turned off. This made Windows diverge from the expected test results by including URLs for the main resource. 1. http://trac.webkit.org/changeset/71097
Attachments
Only track resource identifiers in DRT when dumpResourceLoadCallbacks is on (3.95 KB, patch)
2010-11-02 08:28 PDT, Adam Roben (:aroben)
andersca: review+
Adam Roben (:aroben)
Comment 1 2010-11-02 08:25:16 PDT
Adam Roben (:aroben)
Comment 2 2010-11-02 08:28:20 PDT
Created attachment 72670 [details] Only track resource identifiers in DRT when dumpResourceLoadCallbacks is on
Anders Carlsson
Comment 3 2010-11-02 08:29:24 PDT
Comment on attachment 72670 [details] Only track resource identifiers in DRT when dumpResourceLoadCallbacks is on View in context: https://bugs.webkit.org/attachment.cgi?id=72670&action=review > WebKitTools/ChangeLog:59 > + This seems unrelated?
Adam Roben (:aroben)
Comment 4 2010-11-02 08:29:51 PDT
Comment on attachment 72670 [details] Only track resource identifiers in DRT when dumpResourceLoadCallbacks is on View in context: https://bugs.webkit.org/attachment.cgi?id=72670&action=review >> WebKitTools/ChangeLog:59 >> + > > This seems unrelated? Yes, whoops!
Adam Roben (:aroben)
Comment 5 2010-11-02 08:38:21 PDT
Note You need to log in before you can comment on or make changes to this bug.