third_party/WebKit/WebKitTools/DumpRenderTree/win/ResourceLoadDelegate.cpp
@@ -217,7 +217,7 @@ HRESULT STDMETHODCALLTYPE ResourceLoadDelegate::identifierForInitialRequest(
     /* [in] */ IWebDataSource* dataSource,
     /* [in] */ unsigned long identifier)
 { 
-    if (!done) {
+    if (!done && gLayoutTestController->dumpResourceLoadCallbacks()) {
         BSTR urlStr;
         if (FAILED(request->URL(&urlStr)))
             return E_FAIL;
@@ -233,10 +233,7 @@ HRESULT STDMETHODCALLTYPE ResourceLoadDelegate::removeIdentifierForRequest(
     /* [in] */ IWebView* webView,
     /* [in] */ unsigned long identifier)
 {
-    if (!done) {
-        ASSERT(urlMap().contains(identifier));
-        urlMap().remove(identifier);
-    }
+    urlMap().remove(identifier);
 
     return S_OK;
 }
